--- a/index.html
+++ b/index.html
@@ -18,11 +18,15 @@
       </div>
       <div id="unity-warning"> </div>
       <div id="unity-footer">
-        <div id="unity-webgl-logo"></div>
+        <div id="unity-webgl-logo"><a download="Build/Standalone-Labnica.rar"></a></div>
         <div id="unity-fullscreen-button"></div>
         <div id="unity-build-title">Labnica Multiplayer</div>
       </div>
+      <div>
+        <a href="Build/Standalone-Labnica.rar" download>Descargar Standalone</a>
+      </div>
     </div>
+    
     <script>
       var container = document.querySelector("#unity-container");
       var canvas = document.querySelector("#unity-canvas");
